--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router": "^7.7.1"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.2.2",
     "@react-router/dev": "^7.7.1",
     "@tailwindcss/vite": "^4.1.4",
     "@types/compression": "^1.7.5",
