--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "cSpell.words": [
-    "draaimolen"
+    "draaimolen",
+    "Timeslot"
   ],
   "editor.defaultFormatter": "biomejs.biome",
   "[json]": {
