--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "typecheck": "react-router typegen && tsc -b"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@react-router/express": "^7.7.1",
     "@react-router/node": "^7.7.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "compression": "^1.7.5",
     "express": "^5.1.0",
     "isbot": "^5.1.27",
+    "lucide-react": "^0.542.0",
     "morgan": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.7.1"
+    "react-router": "^7.7.1",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.2",
@@ -32,6 +38,7 @@
     "@types/react-dom": "^19.1.2",
     "cross-env": "^7.0.3",
     "tailwindcss": "^4.1.4",
+    "tw-animate-css": "^1.3.7",
     "typescript": "^5.8.3",
     "vite": "^6.3.3",
     "vite-tsconfig-paths": "^5.1.4"
