--- a/tsconfig.vite.json
+++ b/tsconfig.vite.json
@@ -16,12 +16,14 @@
     "module": "ES2022",
     "moduleResolution": "bundler",
     "jsx": "react-jsx",
-    "baseUrl": ".",
     "rootDirs": [".", "./.react-router/types"],
+    "typeRoots": ["./types", "./node_modules/@types"],
+    "baseUrl": ".",
     "paths": {
-      "~/*": ["./app/*"]
+      "#*": ["./*"]
     },
     "esModuleInterop": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "allowImportingTsExtensions": true
   }
 }
